objects/Routing_Dealer_CRM_Disposition__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Time_DT_c__c</fullName>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Response__c</fullName>
        <label>Auto Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HELMS_Opportunity_External_Key__c</fullName>
        <label>HELMS Opportunity External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OffSet__c</fullName>
        <label>OffSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>The_Last_Event__c</fullName>
        <label>The Last Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Routing Dealer CRM Disposition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>HELMS_Opportunity_External_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Routing Dealer CRM Disposition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Dealer CRM Dispositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>